src/codegen/tests/snapshots/rusty__codegen__tests__constants_tests__assigning_const_array_variable.snap
---
source: src/codegen/tests/constants_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%main = type { [4 x i16] }

@const_arr = unnamed_addr constant [4 x i16] [i16 1, i16 2, i16 3, i16 4]
@main_instance = global %main zeroinitializer

define void @main(%main* %0) {
entry:
  %arr = getelementptr inbounds %main, %main* %0, i32 0, i32 0
  %1 = bitcast [4 x i16]* %arr to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align [filtered] %1, i8* align [filtered] bitcast ([4 x i16]* @const_arr to i8*), i64 ptrtoint ([4 x i16]* getelementptr ([4 x i16], [4 x i16]* null, i32 1) to i64), i1 false)
  ret void
}

; Function Attrs: argmemonly nofree nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #0

attributes #0 = { argmemonly nofree nounwind willreturn }
