src/codegen/tests/snapshots/rusty__codegen__tests__constants_tests__assigning_const_struct_variable.snap
---
source: src/codegen/tests/constants_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%Point = type { i16, i16 }
%main = type { %Point }

@const_strct = unnamed_addr constant %Point { i16 1, i16 2 }
@__Point__init = unnamed_addr constant %Point zeroinitializer
@main_instance = global %main zeroinitializer

define void @main(%main* %0) {
entry:
  %strct = getelementptr inbounds %main, %main* %0, i32 0, i32 0
  %1 = bitcast %Point* %strct to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align [filtered] %1, i8* align [filtered] bitcast (%Point* @const_strct to i8*), i64 ptrtoint (%Point* getelementptr (%Point, %Point* null, i32 1) to i64), i1 false)
  ret void
}

; Function Attrs: argmemonly nofree nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #0

attributes #0 = { argmemonly nofree nounwind willreturn }
